--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL = mongodb+srv://baku:baku2020@cluster0.aleqr.mongodb.net/bakubotchats?retryWrites=true&w=majority
+DATABASE_URL = mongodb+srv://baku:baku2020@cluster0.aleqr.mongodb.net/chats?retryWrites=true&w=majority
